--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,5 +10,19 @@
 </head>
 <body>
   <h1>APP Running 🚀</h1>
+
+  <div>
+    <input type="emai" id="email" placeholder="digite seu email" value="lu@mail.com">
+    <br>
+    <input type="password" id="password" placeholder="digite sua senha" value="1234">
+    <br>
+    <button id="btnSign">Entra</button>
+    <br>
+    <button id="btnMyProfile">Meu Perfil</button>
+
+    <pre id="myprofile"></pre>
+  </div>
+
+  <script src="app.js" type="module"></script>
 </body>
 </html>
