--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,25 +4,41 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="favicon.svg" type="image/svg">
   <title>MyReb</title>
 </head>
 <body>
-  <h1>APP Running 🚀</h1>
+  <div id="app">
+    <header class="header">
+      Header - {{ name }}
+    </header>
 
-  <div>
-    <input type="emai" id="email" placeholder="digite seu email" value="lu@mail.com">
-    <br>
-    <input type="password" id="password" placeholder="digite sua senha" value="1234">
-    <br>
-    <button id="btnSign">Entra</button>
-    <br>
-    <button id="btnMyProfile">Meu Perfil</button>
+    <main class="main">
+      <div class="aside">
+        <div class="nav">
+          <router-link to="/" class="nav-link" exact-active-class="active">
+            <i class='bx bxs-home' style='color:#f6f6f6'  ></i>
+          </router-link>
+          <router-link to="/about" class="nav-link" exact-active-class="active">
+            <i class='bx bxs-info-circle' style='color:#f6f6f6' ></i>
+          </router-link>
+        </div>
+      </div>
+      <section class="section">
+        <router-view></router-view>
+      </section>
+    </main>
 
-    <pre id="myprofile"></pre>
+    <footer class="footer">
+      footer
+    </footer>
   </div>
 
-  <script src="app.js" type="module"></script>
+  <script src="./libs/vue.js"></script>
+  <script src="./libs/vuex.js"></script>
+  <script src="./libs//vue-router.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
