--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,117 +11,10 @@
 </head>
 <body>
   <div id="app">
-    <header class="header">
-      <div class="logo">
-        <router-link to="/" class="logo-link">
-          <i class='bx bx-git-merge' style='color:#f6f6f6'  ></i>
-          <span>MyReb</span>
-        </router-link>
-      </div>
-      {{ $store.state.user.nickname }}
-    </header>
-    <main v-if="$store.state.user.nickname" class="main">
-      <div class="aside">
-        <div class="nav">
-          <router-link to="/" class="nav-link" exact-active-class="active">
-            <i class='bx bxs-home' style='color:#f6f6f6'  ></i>
-          </router-link>
-          <router-link to="/about" class="nav-link" exact-active-class="active">
-            <i class='bx bxs-info-circle' style='color:#f6f6f6' ></i>
-          </router-link>
-        </div>
-      </div>
-      <section class="section">
-        <router-view></router-view>
-      </section>
-    </main>
-
-
-    <main v-else class="main">
-      <div class="login">
-        <header class="l-header">
-          <button @click="viewSignIn" :class="verifyClassActiveBtn(vSignInOrSignUp)">Logar</button>
-          <button @click="viewSignUp" :class="verifyClassActiveBtn(!vSignInOrSignUp)">Criar conta</button>
-        </header>
-        <main class="l-main" v-if="vSignInOrSignUp">
-          <h5>Faça login para continuar</h5>
-
-          <div class="l-form">
-
-            <div class="form-control">
-              <label for="email">E-mail</label>
-              <input type="email" v-model="email" placeholder="digite seu e-mail">
-            </div>
-
-            <div class="form-control">
-              <label for="password">Senha</label>
-              <div class="fc-group">
-                <input type="password" id="password" v-model="password" placeholder="digite sua senha">
-                <button @click="viewLockCloseOrOpen">
-                  <i v-if="vlock" class='bx bxs-lock-alt' style='color:#f6f6f6'  ></i>
-                  <i v-else class='bx bx-lock-open-alt' style='color:#f6f6f6' ></i>
-                </button>
-              </div>
-            </div>
-
-            <h6 class="lf-message">{{ messageForm }}</h6>
-
-            <div class="form-control-button">
-              <button @click="clearFormLogin">Limpar</button>
-              <button @click="signIn" class="btn-primary">Entrar</button>
-            </div>
-          </div>
-        </main>
-
-        <main class="l-main" v-else>
-          <h5>Abrir conta</h5>
-
-          <div class="l-form">
-
-            <div class="form-control">
-              <label for="name">Nome</label>
-              <input type="text" v-model="name" placeholder="digite seu nome">
-            </div>
-
-            <div class="form-control">
-              <label for="email">E-mail</label>
-              <input type="email" v-model="email" placeholder="digite seu e-mail">
-            </div>
-
-            <div class="form-control">
-              <label for="password">Senha</label>
-              <div class="fc-group">
-                <input type="password" id="password" v-model="password" placeholder="digite sua senha">
-                <button @click="viewLockCloseOrOpen">
-                  <i v-if="vlock" class='bx bxs-lock-alt' style='color:#f6f6f6'  ></i>
-                  <i v-else class='bx bx-lock-open-alt' style='color:#f6f6f6' ></i>
-                </button>
-              </div>
-            </div>
-
-            <h6 class="lf-message">{{ messageForm }}</h6>
-
-            <div class="form-control-button">
-              <button @click="clearFormLogin">Limpar</button>
-              <button @click="signUp" class="btn-primary">Abrir a conta</button>
-            </div>
-          </div>
-
-
-
-        </main>
-        <footer class="l-footer">
-
-        </footer>
-      </div>
-    </main>
-
-    <footer class="footer">
-      <span>
-        <i class='bx bx-git-merge' style='color:#f6f6f6'  ></i>
-        <strong>1.0.0</strong>
-      </span>
-    </footer>
+    <Header-Main></Header-Main>
+    <Main-Main v-if="$store.state.user.nickname"></Main-Main>
+    <Login v-else ></Login>
+    <Footer-Main></Footer-Main>
   </div>
 
   <script src="./libs/vue.js"></script>
